syntax = "proto3";

option csharp_namespace = "TinCanPhone.Protos";

package tincan;

service Receiver {

  rpc HandleUnaryMessages (RequestMessage) returns (ResponseMessage);
  rpc HandleBidirectionalMessages (stream RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage {
  string message = 1;
}

message ResponseMessage {
  string response = 1;
}
